--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": [
+      "jest",
+      "@testing-library/jest-dom",
+      "@testing-library/react",
+      "@testing-library/user-event"
+    ],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
